<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_constraint_layout"
    tools:context=".view.activities.MainActivity">

    <FrameLayout
        android:id="@+id/background_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background_pic"
            android:scaleX="1"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background_image_desc" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            app:srcCompat="@drawable/lunch_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/app_desc"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/background_layout"
        android:layout_marginLeft="@dimen/margin_sides"
        android:layout_marginRight="@dimen/margin_sides"
        android:layout_marginBottom="@dimen/margin_bottom">

        <Button
            android:id="@+id/google_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/custom_google_button"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableStart="@drawable/ic_google_plus"
            android:paddingStart="@dimen/button_inner_padding_start"
            android:paddingEnd="@dimen/button_inner_padding_end"
            android:text="@string/google_signIn"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/facebook_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/custom_facebook_button"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableStart="@drawable/ic_facebook"
            android:paddingStart="@dimen/button_inner_padding_start"
            android:paddingEnd="@dimen/button_inner_padding_end"
            android:text="@string/facebook_signIn"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/twitter_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/custom_twitter_button"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableStart="@drawable/ic_twitter"
            android:paddingStart="@dimen/button_inner_padding_start"
            android:paddingEnd="@dimen/button_inner_padding_end"
            android:text="@string/twitter_signIn"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/mail_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/custom_mail_button"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableStart="@drawable/ic_mail"
            android:paddingStart="@dimen/button_inner_padding_start"
            android:paddingEnd="@dimen/button_inner_padding_end"
            android:text="@string/email_signIn"
            android:textColor="@color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>