<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_restaurant_main_layout"
    tools:context=".controllers.activities.MainActivity">

    <LinearLayout
        android:id="@+id/restaurant_global_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- TOP -->
        <LinearLayout
            android:id="@+id/restaurant_top_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:layout_weight="0.5">

            <ImageView
                android:id="@+id/restaurant_background_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/background_pic"
                android:layout_weight="0.2"/>

            <!-- Restaurant informations -->
            <LinearLayout
                android:id="@+id/restaurant_informations_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.6">

                <LinearLayout
                    android:id="@+id/restaurant_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_restaurantName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_margin="@dimen/margin"
                        android:text="RestaurantName" />

                    <!-- STARS TO ADD HERE
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    -->

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/restaurant_address_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_restaurantAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_margin="@dimen/margin"
                        android:text="TypeOfRestaurant - Address"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- BOTTTOM -->
        <LinearLayout
            android:id="@+id/restaurant_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5" >

            <!-- Buttons bar -->
            <LinearLayout
                android:id="@+id/restaurant_buttonsBar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/restaurant_call_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/colorPrimary"
                        android:background="@drawable/ic_call" />

                    <TextView
                        android:id="@+id/tv_restaurant_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/restaurant_call"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/restaurant_like_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/colorPrimary"
                        android:background="@drawable/ic_like" />

                    <TextView
                        android:id="@+id/tv_restaurant_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/restaurant_like"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/restaurant_website_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@color/colorPrimary"
                        android:background="@drawable/ic_website" />

                    <TextView
                        android:id="@+id/tv_restaurant_website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/restaurant_website"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:focusable="true"
        android:clickable="true"
        app:fabSize="auto"
        app:backgroundTint="@color/white"
        app:layout_anchor="@id/restaurant_background_picture"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>